# Krill

./: .gitignore  Cargo.toml  LICENSE  README.md  SPECSHEET.md
client/: Cargo.toml
client/src/: lib.rs
dkg/: Cargo.toml
dkg/src/: csprng.rs  errors.rs  main.rs  state.rs  traits.rs
dkg/src/ed25519/: dkg.rs  keypair.rs  mod.rs  storage.rs
dkg/src/ops/: dkg_storage.rs  helpers.rs  mod.rs  signing.rs  signing_storage.rs
dkg/src/traits/: dkg.rs  hashing.rs  mod.rs  signing.rs  storage.rs
frost-channels/: Cargo.toml
frost-channels/src/: lib.rs
krill-common/: Cargo.toml
krill-common/src/: app_state.rs  auth_token.rs  branding.rs  csprng.rs  errors.rs  holder.rs  language.rs  lib.rs  mail_verifier.rs  organization.rs  types.rs  user_storage_key.rs  utils.rs
krill-frost/: Cargo.toml
krill-frost/src/: errors.rs  lib.rs  state.rs
krill-frost/src/ops/: dkg.rs  helpers.rs  identifier_generator.rs  mod.rs  signing.rs
krill-frost/src/ops/storage/: distributed_signing.rs  dkg.rs  fjall_storage.rs  mod.rs  ops.rs  types.rs  utils.rs
krill-frost/src/traits/: dkg.rs  frost_types.rs  mod.rs  signing.rs  storage.rs
krill-mail/: Cargo.toml
krill-mail/src/: email_builder.rs  lib.rs  mailer.rs  transport_builder.rs
krill-server/: Cargo.toml  Dioxus.toml
krill-server/assets/: main.css
krill-server/assets/fonts/: fonts-stylesheet.css
krill-server/assets/translations/configuration/: en-US.bcp47  sw.bcp47
krill-server/assets/translations/dashboard/: en-US.bcp47
krill-server/assets/translations/login/: en-US.bcp47
krill-server/assets/translations/support-mail-verification-page/: en-US.bcp47
krill-server/src/: main.rs
krill-server/src/backend/: assets.rs  home.rs  init_store.rs  lang_loader.rs  languages.rs  mod.rs  server_utils.rs  state.rs  supervisor_demo.rs  verification.rs
krill-server/src/backend/dashboard/: defaults.rs  mod.rs
krill-server/src/frontend/: app.rs  asset_icons.rs  assets.rs  mod.rs  notifications.rs  routes.rs  translations.rs  translations_loader.rs
krill-server/src/frontend/asset_ops/: asset_icons.rs  assets.rs  mod.rs  org_info.rs
krill-server/src/frontend/components/: buttons.rs  colors.rs  error.rs  header.rs  input.rs  loaders.rs  loading_langs.rs  mod.rs  passcode_verification.rs  single_card.rs
krill-server/src/frontend/design_elements/: colors.rs
krill-server/src/frontend/pages/: configuration.rs  errors.rs  home.rs  login.rs  mod.rs
krill-server/src/frontend/pages/configuration/: language.rs  mod.rs  org_info.rs  page.rs  passcode.rs  secrets.rs  verification.rs  verify_support_mail.rs
krill-server/src/frontend/pages/dashboard/: mod.rs  shell.rs  superuser.rs
krill-server/src/frontend/svg_icons/: notifications.rs
krill-store/: Cargo.toml
krill-store/src/: app_state.rs  auth_tokens.rs  branding.rs  languages.rs  lib.rs  org_info.rs  storage.rs
krill-store/src/client/: storage.rs
krill-store/src/server/: app_state.rs  mod.rs  organizations.rs  secrets.rs  storage.rs
solana-tx-parser/: Cargo.toml
solana-tx-parser/src/: lib.rs  tx_req.rs  version.rs
wasm-toolkit/: Cargo.toml
wasm-toolkit/src/: common.rs  errors.rs  lib.rs  notifications.rs
wasm-toolkit/src/document_ops/: css_variables.rs  dropzone.rs  elements.rs  favicon.rs  focus.rs  mod.rs
wasm-toolkit/src/window_ops/: language.rs  location.rs  match_media.rs  mod.rs  scroll.rs  storage.rs  viewport_ops.rs
