[workspace]
members = [
    "client",
    "krill-common",
    "krill-frost",
    "krill-server",
    "krill-store",
    "wasm-toolkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["JamiiDao <support@jamiidao.app>"]
description = "Institution grade server for Solana onchain tokenization, attestation and stablecoins"
readme = "./README.md"
keywords = [
    "solana",
    "solana-pay",
    "onchain-attestation",
    "tokenization",
    "wallet-adapter",
]
categories = ["cryptography::cryptocurrencies"]
license = "AGPL-3.0"
edition = "2021"

[workspace.dependencies]
krill-common = { path = "./krill-common" }
wasm-toolkit = { path = "./wasm-toolkit" }
krill-frost = { path = "./krill-frost" }
krill-store = { path = "./krill-store" }

redb = "3.1.0"
tai64 = "4.1.0"
thiserror = { version = "2.0.18", default-features = false }
bitcode = "0.6.7"
async-dup = "1.2.4"
async-lock = "3.4.2"
async-channel = "2.5.0"
blake3 = "1.8.3"
dirs = "6.0.0"
smol = "2.0.2"
rand = "=0.8"
rand_chacha = { version = "0.9", features = ["os_rng"] }
camino = "1.2.2"
blocking = "1.6.2"
fjall = { version = "3.0.1", default-features = false }
async-fs = "2.2.0"
zeroize = { version = "1.8.2", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3.0", default-features = false }
reqwest = "0.13.2"
tokio = { version = "1.49.0", features = ["full"] }
futures-lite = "2.6.1"
jzon = "0.12"
serde = { version = "1", features = ["derive"] }

[workspace.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "console",
    "Location",
    "DomException",
    "Navigator",
    "MediaQueryList",
    "CssStyleDeclaration",
    "Event",
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
