[workspace]
members = [
    "krill-common",
    "krill-frost",
    "krill-mail",
    "krill-server",
    "krill-store",
    "solana-tx-parser",
    "wasm-toolkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["JamiiDao <support@jamiidao.app>"]
description = "Institution grade server for Solana onchain tokenization, attestation and stablecoins"
readme = "./README.md"
keywords = [
    "solana",
    "solana-pay",
    "onchain-attestation",
    "tokenization",
    "wallet-adapter",
]
categories = ["cryptography::cryptocurrencies"]
license = "AGPL-3.0"
edition = "2021"

[workspace.dependencies]
krill-common = { path = "./krill-common" }
wasm-toolkit = { path = "./wasm-toolkit" }
krill-frost = { path = "./krill-frost" }
krill-store = { path = "./krill-store" }
krill-mail = { path = "./krill-mail" }
solana-tx-parser = { path = "./solana-tx-parser" }

tai64 = "4.1.0"
thiserror = { version = "2.0.18", default-features = false }
bitcode = "0.6.7"
async-dup = "1.2.4"
async-lock = "3.4.2"
async-channel = "2.5.0"
blake3 = { version = "1.8.4", default-features = false, features = [
    "wasm32_simd",
] }
dirs = "6.0.0"
smol = "2.0.2"
rand = "=0.8"
rand_chacha = { version = "0.9", features = ["os_rng"] }
camino = "1.2.2"
blocking = "1.6.2"
fjall = { version = "3.0.1", default-features = false }
async-fs = "2.2.0"
zeroize = { version = "1.8.2", default-features = false }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
js-sys = "0.3.85"
base64ct = { version = "1.8.3", features = ["std"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.1"
jzon = "0.12.5"
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
    "http2",
] }
web-sys = { version = "0.3.85", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "console",
    "Location",
    "DomException",
    "Navigator",
    "MediaQueryList",
    "CssStyleDeclaration",
    "DomTokenList",
    "DragEvent",
    "DataTransfer",
    "File",
    "FileList",
    "Blob",
    "Event",
    "HtmlInputElement",
    "ScrollBehavior",
    "ScrollToOptions",
    "HtmlLinkElement",
    "Storage",
] }
gloo-timers = { version = "0.3.0", default-features = false }
countries-iso3166 = { version = "1.6.0", features = [
    "std",
    "small_keys",
    "serde",
] }
url = "2.5.8"
file-format = { version = "0.29.0", default-features = false, features = [
    "reader-ebml",
    "reader-mp4",
    "reader-pdf",
    "reader-txt",
    "reader-zip",
] }


[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
