[package]
name = "frost-dkg-channel"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["p256", "ed25519", "quic-https"]
p256 = ["dep:frost-p256"]
ed25519 = ["dep:frost-ed25519"]
quic-https = ["dep:quinn"]

[dependencies]
frost-p256 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
], optional = true }
frost-ed25519 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
], optional = true }

quinn = { version = "=0.11.9", default-features = false, features = [
    "runtime-smol",
    "rustls",
], optional = true }
# rand = "0.9"
blake3 = "1.8.2"
frost-core = { version = "2.2.0", default-features = false, features = [
    "cheater-detection",
] }
thiserror = { version = "2.0.17", default-features = false }
zeroize = { version = "1.8.2", default-features = false }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
async-dup = "1.2.4"
async-lock = "3.4.1"
async-io = "2.6.0"
smol = "2.0.2"
wincode = { version = "0.1.2", features = ["derive"] }
