[package]
name = "frost-channels"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["p256", "ed25519"]
p256 = ["dep:frost-p256"]
ed25519 = ["dep:frost-ed25519"]

[dependencies]
frost-p256 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
    "serde",
], optional = true }
frost-ed25519 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
    "serde",
], optional = true }
blake3 = "1.8.2"
frost-core = { version = "2.2.0", default-features = false, features = [
    "cheater-detection",
    "serde",
] }
thiserror = { version = "2.0.17", default-features = false }
zeroize = { version = "1.8.2", default-features = false }
rand_chacha = { version = "0.9", features = ["os_rng"] }
async-dup = "1.2.4"
async-lock = "3.4.1"
rand = "=0.8"
bitcode = { version = "0.6.7", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
smol = "2.0.2"
