[package]
name = "krill-frost"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["p256", "ed25519"]
p256 = ["dep:frost-p256"]
ed25519 = ["dep:frost-ed25519"]

[dependencies]
frost-p256 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
    "serde",
], optional = true }
frost-ed25519 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
    "serde",
], optional = true }
frost-core = { version = "2.2.0", default-features = false, features = [
    "cheater-detection",
    "serde",
] }


blake3.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand_chacha.workspace = true
async-dup.workspace = true
async-lock.workspace = true

rand = "=0.8"
serde.workspace = true
redb = "3.1.0"

[dev-dependencies]
smol.workspace = true
