[package]
name = "krill-frost"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["p256", "ed25519"]
p256 = ["dep:frost-p256"]
ed25519 = ["dep:frost-ed25519"]

[dependencies]
frost-p256 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
], optional = true }
frost-ed25519 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
], optional = true }
frost-core = { version = "2.2.0", default-features = false, features = [
    "cheater-detection",
] }


blake3.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand_chacha.workspace = true
async-dup.workspace = true
async-lock.workspace = true
bitcode = { workspace = true }
rand = "=0.8"
dirs.workspace = true
camino = "1.2.2"
blocking = "1.6.2"
fjall.workspace = true
futures-lite = { version = "2.6.1", default-features = false, features = [
    "alloc",
    "futures-io",
] }
async-fs = "2.2.0"

[dev-dependencies]
smol.workspace = true
