[package]
name = "krill-frost"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["ed25519"]
p256 = ["dep:frost-p256"]
ed25519 = ["dep:frost-ed25519"]

[dependencies]
frost-p256 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
], optional = true }
frost-ed25519 = { version = "=2.2.0", default-features = false, features = [
    "cheater-detection",
    "serialization",
], optional = true }
frost-core = { version = "2.2.0", default-features = false, features = [
    "cheater-detection",
] }
krill-common = { workspace = true, features = [
    "storage",
    "home-dir",
    "random",
] }

blake3.workspace = true
thiserror.workspace = true
zeroize.workspace = true
async-dup.workspace = true
async-lock.workspace = true
bitcode = { workspace = true }
rand.workspace = true
camino.workspace = true
blocking.workspace = true
fjall.workspace = true

[dev-dependencies]
smol.workspace = true
