[package]
name = "krill-mail"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "hostname",
    "ring",
    "rustls",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "webpki-roots",
] }
krill-common.workspace = true
tai64 = { workspace = true }
bitcode.workspace = true

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
