[package]
name = "krill-server"
version = "0.1.0"
authors = ["448 OG <superuser@448.africa>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krill-common = { workspace = true, features = ["fs"] }
krill-store = { workspace = true, optional = true }
krill-mail = { workspace = true, optional = true }
solana-tx-parser = { workspace = true, optional = true }

dioxus = { version = "0.7", features = ["fullstack", "router"] }
axum = { version = "0.8", optional = true }
reqwest.workspace = true
tracing = "0.1.44"
wasm-toolkit.workspace = true
async-dup = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }
async-fs = { workspace = true, optional = true }
wasm-bindgen-futures.workspace = true
fastrand = { version = "2.3.0", features = ["getrandom", "js"] }
futures-lite = { version = "2.6.1", optional = true }
tower-http = { version = "0.6.8", optional = true }
axum-extra = { version = "0.12.5", features = ["cookie"], optional = true }
blake3 = { workspace = true }
base64ct.workspace = true
bitcode = { workspace = true }
yansi = { version = "1.0.1", optional = true }
web-sys = { workspace = true, features = ["Window", "Document", "Element"] }
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
jzon.workspace = true
countries-iso3166.workspace = true
tokio = { version = "1.50.0", default-features = false, optional = true }
byte_prefix = "1.0.0"
url.workspace = true
gloo-timers.workspace = true
percent-encoding = { version = "2.3.2", features = ["std"] }

[features]
web = ["dioxus/web", "dep:async-channel"]
default = []
server = [
    "dioxus/server",
    "dep:krill-store",
    "dep:krill-mail",
    "dep:axum",
    "dep:async-lock",
    "dep:async-fs",
    "dep:async-dup",
    "dep:async-channel",
    "dep:tower-http",
    "dep:futures-lite",
    "dep:axum-extra",
    "dep:tokio",
    "dep:yansi",
    "dep:solana-tx-parser",

]
tokio = []
