[package]
name = "krill-store"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[features]
server_storage = ["dep:fjall", "krill-common/storage"]
client_storage = ["dep:redb", "krill-common/client_storage"]

[dependencies]
fjall = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
camino.workspace = true
krill-frost.workspace = true
krill-common = { workspace = true, optional = true }
async-dup.workspace = true
blocking.workspace = true
bitcode.workspace = true
blake3.workspace = true
tai64.workspace = true
