[package]
name = "wasm-toolkit"
version = "0.1.1"
authors = ["448-OG <superuser@448.africa>"]
description = "Utilities for common WebAssembly operations like error handling, fetching browser windows, etc while utilizing the same error handling methods."
keywords = ["WabAssembly", "wasm"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
async-channel.workspace = true
async-lock.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
